--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
           <span class="webmap-text"><img src="images/tracos.png" height="20px">&nbsp;&nbsp;&nbsp;&nbsp;W E B M A P</span>
           <!-- Logo -->
           <a class="navbar-brand" href="https://sol-iop.com.br/" target="_blank">
-              <img src="/images/sol-v3.png" alt="Logo" class="center-img">
+              <img src="/images/tropicalia_fundo_branco.png" alt="Logo" class="center-img">
           </a>
       </div>
   </nav>
